--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,3 +37,32 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.2.0
+
+    - name: Terraform Init
+      working-directory: terraform
+      run: terraform init
+
+    - name: Terraform Format Check
+      working-directory: terraform
+      run: terraform fmt -check
+
+    - name: Terraform Validate
+      working-directory: terraform
+      run: terraform validate
+
+    - name: Terraform Plan
+      working-directory: terraform
+      run: terraform plan
+
+    - name: Terraform Apply
+      working-directory: terraform
+      run: terraform apply --auto-approve
+
+    - name: Terraform Destroy
+      working-directory: terraform
+      run: terraform destroy --auto-approve
