--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,13 +54,13 @@ jobs:
       working-directory: terraform
       run: terraform init
 
-    - name: Terraform Format Check
-      working-directory: terraform
-      run: terraform fmt -check
+    # - name: Terraform Format Check
+    #   working-directory: terraform
+    #   run: terraform fmt -check
 
-    - name: Terraform Validate
-      working-directory: terraform
-      run: terraform validate
+    # - name: Terraform Validate
+    #   working-directory: terraform
+    #   run: terraform validate
 
     - name: Terraform Plan
       working-directory: terraform
