--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,7 +44,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-    
+
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3
       with:
@@ -62,6 +62,6 @@ jobs:
       working-directory: terraform
       run: terraform apply --auto-approve
 
-    - name: Terraform Destroy
-      working-directory: terraform
-      run: terraform destroy --auto-approve
+    # - name: Terraform Destroy
+    #   working-directory: terraform
+    #   run: terraform destroy --auto-approve
