--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -62,6 +62,6 @@ jobs:
       working-directory: terraform
       run: terraform apply --auto-approve
 
-    # - name: Terraform Destroy
-    #   working-directory: terraform
-    #   run: terraform destroy --auto-approve
+    - name: Terraform Destroy
+      working-directory: terraform
+      run: terraform destroy --auto-approve
