feat: update actions

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -58,10 +58,10 @@ jobs:
       working-directory: terraform
       run: terraform plan
 
+    - name: Terraform Destroy
+      working-directory: terraform
+      run: terraform destroy --auto-approve
+
     - name: Terraform Apply
       working-directory: terraform
       run: terraform apply --auto-approve
-
-    # - name: Terraform Destroy
-    #   working-directory: terraform
-    #   run: terraform destroy --auto-approve
