--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -58,9 +58,9 @@ jobs:
       working-directory: terraform
       run: terraform plan
 
-    - name: Terraform Destroy
-      working-directory: terraform
-      run: terraform destroy --auto-approve
+    # - name: Terraform Destroy
+    #   working-directory: terraform
+    #   run: terraform destroy --auto-approve
 
     - name: Terraform Apply
       working-directory: terraform
